# PICO-stepper-module

./: .gitignore  README.md  build.py  flake.nix
.github/workflows/: build-firmware.yml
ddrive/: CMakeLists.txt  ddrive.c  ddrive.h  interp.h  stepper.c  stepper.h
ddrive_module/: micropython.cmake
ddrive_module/ddrive_module/: ddrive_class.c  ddrive_class.h  ddrive_module.c  example.c  micropython.cmake  micropython.mk  stepper_class.c  stepper_class.h
diff_drive/: diff_drive.c  diff_drive.h  micropython.cmake
diff_drive/diff_drive/: diff_drive_mod.c  micropython.cmake  micropython.mk
diff_drive_module/: micropython.cmake
diff_drive_module/diff_drive_module/: diff_drive_module.c  micropython.cmake  micropython.mk
examples/: diff_drive.py  stepper.py
micropython_module/: micropython.cmake  stepper.pyi
micropython_module/stepper_module/: ddrive_class.h  micropython.cmake  micropython.mk  module.c  stepper_class.h
stepper/: CMakeLists.txt  ddrive.c  ddrive.h  stepper.c
stepper_module/: micropython.cmake
stepper_module/stepper_module/: micropython.cmake  micropython.mk
stepperlib/: CMakeLists.txt  ddrive.c  ddrive.h  stepper.h
